--- a/package.json
+++ b/package.json
@@ -6,16 +6,26 @@
     "type": "git",
     "url": "https://github.com/nodecloud/koa-auth.git"
   },
+  "main": "index.js",
   "scripts": {
-    "test": "mocha",
-    "dist": "babel ./ -d build/ --ignore node_modules/,build/"
+    "test": "mocha --compilers js:babel-core/register",
+    "dist": "babel ./index.js -d build/"
   },
   "author": "yedaodao",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.17.4"
+    "babel-preset-env": "^1.6.1",
+    "lodash": "^4.17.4",
+    "yan-error-class": "^0.1.2"
   },
   "devDependencies": {
-    "mocha": "^4.0.1"
+    "ava": "^0.23.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "koa": "^2.3.0",
+    "mocha": "^4.0.1",
+    "supertest": "^3.0.0"
   }
 }
